# octopi-research

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: README.md  index.html
dorna2/path/: test_path.json
imjoy_plugin/: squid-microscope-chatbot.imjoy.html
scripts/: hypha_storage.py  main_2cameras_sync.py  main_6060.py  main_hcs.py  main_platereader.py  register_chatbot_service.py  squid_controller.py  start_hypha_for_dorna.py  start_hypha_for_squid.py  start_hypha_services.py
software/: hypha_control.py  hypha_register.py  hypha_register_demo.py  main_hcs.py  main_hypha.py  main_platereader.py  test.py
software/control/: _def.py  camera.py  core.py  core_platereader.py  core_reef.py
squid_control/: __init__.py  squid_chatbot.py  squid_controller.py
squid_control/control/: _def.py  camera.py  camera_toupcam.py  core_PDAF.py  core_displacement_measurement.py  core_platereader.py  core_reef.py  gui.py  gui_hcs.py  gui_platereader.py  gui_simulation.py  gui_tiscamera.py  gui_tiscamera_simulation.py  laser_af_reference_plane.txt  microcontroller.py  microcontroller2.py  multipoint_custom_script_entry.py  spectrometer_oceanoptics.py  tracking.py  widgets.py  widgets_tracking.py  widgets_usbspectrometer.py
tests/: dorna_config.json  dorna_route.txt  test_apriltag_position_orientation_display.py  test_dorna_control.py  test_grab_put_scan.py  test_hypha_control.py  test_microscope_chatbot_new  test_microscope_chatbot_new.py  test_plate_reader.py  test_simulation_reaction_apriltag.py  try_transition_package.py
web/: index.html
(+3 files in other folders)
