[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "squid-control"
version = "0.1.0"
readme = "README.md"
description = "Control software for squid mciroscope"
dependencies = [
    "qtpy",
    "pyserial",
    "pandas",
    "imageio",
    "scipy",
    "crc==1.3.0",
    "tifffile",
]
[project.optional-dependencies]
qt = [
    "pyqt5",
    "pyqt5-tools",
    "pyqtgraph",
]
tracking = [
    "tensorrt",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["squid_control*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "bioimageio-chatbot = bioimageio_chatbot.__main__:main",
]